<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context= ".login.ui.views.loginScreen.LoginScreenFragment">

    <TextView
        android:id="@+id/tvTitleLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="Your watchlist"
        android:textStyle="italic"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="HJDKHSKJFDH"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLoginScreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitleLoginCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/loginText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="25dp"
                tools:text="INICIE SESIÓN"/>

            <TextView
                android:id="@+id/tvLoginNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:textStyle="normal"
                android:text="@string/userNameText"
                app:layout_constraintTop_toBottomOf="@id/tvTitleLoginCard"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="Usuario"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginNameUser"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/userNameHintText"
                android:paddingLeft="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginNameUser"/>

            <!-- <androidx.appcompat.widget.SearchView
                android:id="@+id/svLoginNameUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginNameUser"/> -->

            <TextView
                android:id="@+id/tvLoginUserPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:textStyle="normal"
                android:textSize="16dp"
                android:text="@string/userPasswordText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLoginNameUser"
                tools:text="Contraseña"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginUserPassword"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/searchbar_background"
                android:hint="@string/userPasswordHintText"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginUserPassword"/>

            <!--<androidx.appcompat.widget.SearchView
                android:id="@+id/svLoginUserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintTop_toBottomOf="@id/tvLoginUserPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/> -->

            <TextView
                android:id="@+id/tvInfoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:textStyle="normal"
                android:textSize="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLoginUserPassword"
                tools:text="KEFKJEK"/>

            <ProgressBar
                android:id="@+id/pbInfoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLoginUserPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonStartSession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/loginText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvLogin"
        tools:text="LOGIN"/>

    <Button
        android:id="@+id/buttonRegisterUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/registerText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStartSession"
        tools:text="REGISTER"/>

</androidx.constraintlayout.widget.ConstraintLayout>