<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context= ".login.ui.views.RegistrationScreen.RegistrationScreenFragment">

    <TextView
        android:id="@+id/tvRegisterScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/registerFragmentText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Registrar usuario"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegister"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterScreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRegisterNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/userNameText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="@string/userNameText"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterNameUser"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/searchbar_background"
                android:hint="@string/userNameHintText"
                android:paddingLeft="15dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterNameUser"/>

            <!--<androidx.appcompat.widget.SearchView
                android:id="@+id/svRegisterNameUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterNameUser"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </androidx.appcompat.widget.SearchView> -->

            <TextView
                android:id="@+id/tvRegisterPassUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/userPasswordText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRegisterNameUser"
                tools:text="@string/userPasswordText"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassUser"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/searchbar_background"
                android:hint="@string/userPasswordHintText"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterPassUser"/>

            <!-- <androidx.appcompat.widget.SearchView
                android:id="@+id/svRegisterPassUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintTop_toBottomOf="@+id/tvRegisterPassUser"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </androidx.appcompat.widget.SearchView>

            <TextView
                android:id="@+id/tvRegisterMailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/userMailText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRegisterPassUser"
                tools:text="@string/userMailText"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterMailUser"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/searchbar_background"
                android:hint="@string/userMailHintText"
                android:paddingLeft="15dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterMailUser"/> -->

            <TextView
                android:id="@+id/tvInfoRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRegisterPassUser"
                tools:text="EJEMPLO"/>

            <ProgressBar
                android:id="@+id/pbInfoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRegisterPassUser"
                android:visibility="gone"/>
            <!--<androidx.appcompat.widget.SearchView
                android:id="@+id/svRegisterMailUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/searchbar_background"
                app:layout_constraintTop_toBottomOf="@+id/tvRegisterMailUser"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </androidx.appcompat.widget.SearchView> -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/registerText"
        app:layout_constraintTop_toBottomOf="@id/cvRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/registerText"/>
</androidx.constraintlayout.widget.ConstraintLayout>